--- a/backend/package.json
+++ b/backend/package.json
@@ -53,6 +53,7 @@
     "puppeteer-extra-plugin-adblocker": "^2.12.0",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
     "sha1": "^1.1.1",
+    "web3": "^0.19.0",
     "yesno": "^0.3.1"
   }
 }
